--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       , "multer": "^0.1.7"
     }
   , "engines": {
-    "node": "0.10.35",
-    "npm": "2.2.0"
+    "node": "^0.10.35",
+    "npm": "^2.2.0"
   }
 }
